# ChangeLog for virtual/perl-CGI
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-CGI/ChangeLog,v 1.100 2012/08/22 17:20:13 tove Exp $

*perl-CGI-3.600.0 (22 Aug 2012)

  22 Aug 2012; Torsten Veller <tove@gentoo.org> +perl-CGI-3.600.0.ebuild:
  Version bump

*perl-CGI-3.590.0-r1 (21 May 2012)

  21 May 2012; Torsten Veller <tove@gentoo.org> -perl-CGI-3.590.0.ebuild,
  +perl-CGI-3.590.0-r1.ebuild:
  Add perl-5.16 as provider

  09 May 2012; Alexis Ballier <aballier@gentoo.org> perl-CGI-3.590.0.ebuild:
  keyword ~amd64-fbsd

*perl-CGI-3.590.0 (28 Jan 2012)

  28 Jan 2012; Torsten Veller <tove@gentoo.org> +perl-CGI-3.590.0.ebuild:
  Version bump

*perl-CGI-3.550.0 (06 Aug 2011)

  06 Aug 2011; Torsten Veller <tove@gentoo.org> +perl-CGI-3.550.0.ebuild:
  Version bump

*perl-CGI-3.540.0 (21 May 2011)

  21 May 2011; Torsten Veller <tove@gentoo.org> +perl-CGI-3.540.0.ebuild:
  Version bump

*perl-CGI-3.530.0 (26 Apr 2011)

  26 Apr 2011; Torsten Veller <tove@gentoo.org> +perl-CGI-3.530.0.ebuild:
  Version bump

*perl-CGI-3.520 (26 Jan 2011)

  26 Jan 2011; Torsten Veller <tove@gentoo.org> +perl-CGI-3.520.ebuild:
  Version bump

  22 Jan 2011; Torsten Veller <tove@gentoo.org> -perl-CGI-3.15.ebuild,
  -perl-CGI-3.48.ebuild, -perl-CGI-3.49.ebuild, -perl-CGI-3.50.ebuild:
  Cleanup

  22 Jan 2011; Raúl Porcel <armin76@gentoo.org> perl-CGI-3.510.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #351699

  22 Jan 2011; Torsten Veller <tove@gentoo.org> perl-CGI-3.49.ebuild:
  Add perl-5.12.3 as provider

  18 Jan 2011; Jeroen Roovers <jer@gentoo.org> perl-CGI-3.510.ebuild:
  Stable for HPPA (bug #351699).

  18 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  perl-CGI-3.510.ebuild:
  stable x86, security bug 351699

  15 Jan 2011; Markos Chandras <hwoarang@gentoo.org> perl-CGI-3.510.ebuild:
  Stable on amd64 wrt bug #351699

  15 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> perl-CGI-3.510.ebuild: