@@ -8,12 +8,13 @@ EBUILD perl-CGI-3.540.0.ebuild 493 SHA256 de59e3747cbe3140f2105943041d6cf82b46b9
 EBUILD perl-CGI-3.550.0.ebuild 493 SHA256 b1ecd4f38e425a286359eccc61e43157f6298124f0f76529f9b8bebf9236e38b SHA512 d6625d44f644352ca4e76281b946cbee9cdf078228618ed56c62be3f8ff8f25f62a1641a132077ad012f77f4736ecd79949b50f79593eef08cbea96964cb4ff4 WHIRLPOOL 4f84281c30d17dfe64332aecdd44182fe992438d991059adafe81eac6663dbf0af3b26984bb7e1197324d9a97cdc9be5736d973767b51ded5e2f95cbd3184c8b
 EBUILD perl-CGI-3.590.0-r1.ebuild 552 SHA256 d93d9d2fb7cb53f20b5e544f41996de667e1672ada9b9b19d7caeb8d7b86e631 SHA512 58e407011c5527dad40e2c3d8bc1850cd0c3ddf65948c87aaa470752d117029f9f09328b7b793b16997b053dfce5e4c134ae125a0d340355eea974548f15cdfa WHIRLPOOL 5095f1d84781d77b05b0a41eea335c4a42a70d9de16e406a82a99b2284f84555702b75a5a28439e7eedf1e2f2a5c7f176f6f80bb7555a1867984d15d275a50df
 EBUILD perl-CGI-3.600.0.ebuild 521 SHA256 f4e84977d01dc5783fa6ff6df38e6fb166f70aad10d8b1417e1da4c9308c79b3 SHA512 2e211e6e001e6b23e91665d0b5f0ba2e437ff3d7c8938e459990972ea58a25362ab835594ac43db6507f0780eb57a0d94c0b722970583eafde4038ee83fe5ca2 WHIRLPOOL 3e3ce5d61ffe1a2ec333f5f549ea51d69ff2e4fb7c32b10e2b6fa080e59648f9afd786ba02921de55f330d63ffa037c4e5c74ed2a7331ded173b244e4eb5718c
-MISC ChangeLog 11858 SHA256 e65bb6623cf21c648c9bd169aa6523fe45f62242086f5a274bb8c4024fc05740 SHA512 7edb658148bd49f9a1e40a33254565912b7d03028a160befa61469d53d132f152a4b9f786d24f77c2f9930074c49069590615efd714dcbe6b25037fec4e0b57c WHIRLPOOL 5d865429ed80ca849944aed7fdb8da4b9b6eab6678d915b2def1b6ddf653dad3559906cae89c369f4caad2714f860346153811cdbec9a4ed9e1b15da32e0d272
+EBUILD perl-CGI-3.630.0.ebuild 521 SHA256 bb9e172890397bd595ac57461778167a133b01a6c5d7416017e341669b191954 SHA512 f4679d1d545fcca6392a091115caba2d3d50c1bcc01e6962c84bb908657262a66d81fc9a40e7dca63cd9891bcb86500f8c1f01142ad6fb9c20708fb5ca966860 WHIRLPOOL 6dd1e205c91fc025167d8555a3078465ef450548485b742f2264a9d49799616033b57e2934f261f985f2447159ef3260ce72ae1917f67410e32394a627c7d4fb
+MISC ChangeLog 11981 SHA256 75024f9112ee204198d8f5aeb6ced92515583cf67832050804f129bf06131935 SHA512 9930f8337c930a57a2321ddcbb6209f9114e477a7bc3bfcd0c2ae1392bd66ccf6cfde4eb7ed350b84365e6a3c163d2a16ecd445c8806761d761cd89af246f68d WHIRLPOOL 3985e1c012a074b6e755df0215778820be700275a6daf98550577085154fbc307a8c740f0b1850fbaf1ae1a9c3090b2b9a06c7b7db917782043e48366b5b088e
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlA1FNIACgkQV3J2n04EauwjyACdH58+P0TEvchtvcArIOlWyyoJ
-qXoAoMY0rCFxXXEF+OyvvV2Tf/rJ3Ewe
-=feyB
+iEYEAREIAAYFAlCn4yQACgkQV3J2n04EauwgngCfbTrJG4mrIi4wYF/tVNtrPqQO
+x+kAn0YB9Qa/GdOjmJPVJ/ipSR6YUNJ1
+=rSji
 -----END PGP SIGNATURE-----
