@@ -1,6 +1,11 @@
 # ChangeLog for virtual/perl-CGI
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-CGI/ChangeLog,v 1.100 2012/08/22 17:20:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-CGI/ChangeLog,v 1.101 2012/11/17 19:18:59 tove Exp $
+
+*perl-CGI-3.630.0 (17 Nov 2012)
+
+  17 Nov 2012; Torsten Veller <tove@gentoo.org> +perl-CGI-3.630.0.ebuild:
+  Version bump
 
 *perl-CGI-3.600.0 (22 Aug 2012)
 
